--- a/src/05-dice-roller-homework/DiceRoller/DiceRoller/DiceRoller.csproj
+++ b/src/05-dice-roller-homework/DiceRoller/DiceRoller/DiceRoller.csproj
@@ -47,6 +47,7 @@
     <Compile Include="DiceRoller.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RollCommandParser.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
