Stub out expected program flow

--- a/src/09-blackjack/Blackjack/Blackjack.Client.Console/Blackjack.Client.Console.csproj
+++ b/src/09-blackjack/Blackjack/Blackjack.Client.Console/Blackjack.Client.Console.csproj
@@ -48,5 +48,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Blackjack.Core\Blackjack.Core.csproj">
+      <Project>{d31c0293-8afa-4114-b3b2-88f67bc97301}</Project>
+      <Name>Blackjack.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
