--- a/src/09-blackjack/Blackjack/Blackjack.Core/Blackjack.Core.csproj
+++ b/src/09-blackjack/Blackjack/Blackjack.Core/Blackjack.Core.csproj
@@ -42,6 +42,8 @@
   <ItemGroup>
     <Compile Include="Card.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Suite.cs" />
+    <Compile Include="SuiteExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
