--- a/src/09-blackjack/Blackjack/Blackjack.Core/Blackjack.Core.csproj
+++ b/src/09-blackjack/Blackjack/Blackjack.Core/Blackjack.Core.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Card.cs" />
+    <Compile Include="Deck.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Suite.cs" />
     <Compile Include="SuiteExtensions.cs" />
